# farmera-microservices

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PHASE2_GRPC_IMPLEMENTATION_SUMMARY.md  PROCESS_TEMPLATE_IMPLEMENTATION.md  README.md  buf.gen.nodejs.yaml  buf.gen.rust.yaml  docker-compose.yml  package.json  regenerate.ps1  temp_original_controller.ts  update_points.sql
docs/: DEVELOPMENT_GUIDE.md  GRPC_DEVELOPMENT_GUIDE.md  GRPC_SETUP_COMPLETE.md
infrastructure/postgres/: init.sql
media/: media.controller.ts  media.module.ts  media.schema.ts  media.service.ts
migrations/: 0001_create_tables.sql
services/api-gateway/: .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  env.example  package.json
services/communication-service/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
services/grpc-file-service/: package.json
services/grpc-sample-rust-service/: Cargo.toml  README.md
services/grpc-sample-rust-service/src/: client.rs  server.rs
services/notification-service/: .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.v1  README.md  docker-compose.yml
services/payment-service/: .env.example  package.json
services/products-service/: .env.sample  .gitignore  Dockerfile  docker-compose.yml  package.json
services/users-service/: GRPC_README.md  TESTING_GUIDE.md  auth-grpc-test.js  database-cleanup.sql  detailed-grpc-test.js  package.json  reset-tables.sql  swagger.json  test-grpc-client.js  test-grpc-complete.js  tsconfig.json
shared/grpc-protos/: IMPLEMENTATION_GUIDE.md  README.md  buf.gen.nodejs.yaml  buf.gen.rust.yaml  buf.yaml  regenerate.ps1  setup.sh
src/: lib.rs  main.rs  openapi.rs
src/config/: kafka.rs  redis.rs
src/controllers/: attachment_controller.rs  conversation_controller.rs  message_controller.rs  mod.rs  notification_controller.rs  send_controller.rs  template_controller.rs  user_device_controller.rs  user_preferences_controller.rs  webhook.rs  ws_controller.rs
src/dispatchers/: email_dispatcher.rs  push_dispatcher.rs
src/docs/: attachment_doc.rs  message_doc.rs  mod.rs  notification_doc.rs  send_doc.rs  template_doc.rs  user_devices_doc.rs  user_preferences_doc.rs
src/errors/: api_error.rs  chat_error.rs  db_error.rs  file_error.rs  mod.rs
src/middlewares/: auth_middleware.rs  rbac_middleware.rs
tools/: README.md  fix-timestamp.js  health-check.js  regenerate.sh  setup.ps1  setup.sh  start-dev.ps1
(+803 files in other folders)
