[package]
name = "communication-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
actix-web = "4.10.2"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15.7"