[package]
name = "communication-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
actix-web = "4.10.2"
actix-ws = "0.3.0"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono" ] }
redis = "0.29.5"
deadpool-redis = "0.20.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
derive_more = "2.0.1"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"