[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono" ] }
redis = "0.29.5"
deadpool-redis = "0.20.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
derive_more = "2.0.1"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "reqwest"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] } #note: cmake is required